# bit-shift-calculator

./: CMakeLists.txt  main.cpp
